--- a/www/app/index.html
+++ b/www/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CLO Pool | Cryptomena.io</title>
-    <meta name="description" content="High profitability mining pool"/>
-    <meta name="keywords" content="Mining pool, mining, cryptocurrency"/>
+    <title>CLO Pool | PhoenixMax</title>
+    <meta name="description" content="High profitability callisto mining pool"/>
+    <meta name="keywords" content="Mining pool,callisto mining, cryptocurrency"/>
     <script src="https://cdn.polyfill.io/v1/polyfill.min.js?features=Intl.~locale.en"></script>
     {{content-for "head"}}
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto" rel="stylesheet">
